locktree/tests/compilefail/locking_from_same_forward_after_dropping_the_forward_only.stderr
error[E0499]: cannot borrow `forward_a` as mutable more than once at a time
  --> $DIR/locking_from_same_forward_after_dropping_the_forward_only.rs:15:13
   |
13 |     let _b = forward_a.lock_m1().0;
   |              --------- first mutable borrow occurs here
14 |     // Invalid
15 |     let _ = forward_a.lock_m1();
   |             ^^^^^^^^^ second mutable borrow occurs here
16 | }
   | - first borrow might be used here, when `_b` is dropped and runs the `Drop` code for type `std::sync::MutexGuard`
